--- a/native/extorch/src/native/tensor/ops.rs.in
+++ b/native/extorch/src/native/tensor/ops.rs.in
@@ -75,3 +75,9 @@ fn hsplit(
     input: &SharedPtr<CrossTensor>,
     indices_or_sections: IntListOrInt
 ) -> Result<TensorList>;
+
+/// Creates a new tensor by stacking horizontally a sequence of tensors.
+fn hstack(
+    tensors: TensorList,
+    out: TensorOut
+) -> Result<SharedPtr<CrossTensor>>;
