Add inplace argument to index_add

--- a/native/extorch/src/native/tensor/ops.rs.in
+++ b/native/extorch/src/native/tensor/ops.rs.in
@@ -90,5 +90,6 @@ fn index_add(
     index: &SharedPtr<CrossTensor>,
     source: &SharedPtr<CrossTensor>,
     alpha: Scalar,
-    out: TensorOut
+    out: TensorOut,
+    inplace: bool
 ) -> Result<SharedPtr<CrossTensor>>;
