--- a/native/extorch/src/native/tensor/ops.rs.in
+++ b/native/extorch/src/native/tensor/ops.rs.in
@@ -139,3 +139,10 @@ fn narrow_copy(
     length: i64,
     out: TensorOut,
 ) -> Result<SharedPtr<CrossTensor>>;
+
+/// Retrieve the indices of all non-zero elements in a tensor.
+fn nonzero(
+    input: &SharedPtr<CrossTensor>,
+    out: TensorOut,
+    as_tuple: bool
+) -> Result<TensorTuple>;
