--- a/native/extorch/src/native/tensor/ops.rs.in
+++ b/native/extorch/src/native/tensor/ops.rs.in
@@ -162,3 +162,13 @@ fn select(
     dim: i64,
     index_param: i64
 ) -> Result<SharedPtr<CrossTensor>>;
+
+/// Writes all values from the tensor `src` into `input` at the indices specified in the `index` tensor.
+fn scatter(
+    input: &SharedPtr<CrossTensor>,
+    dim: i64,
+    index_param: &SharedPtr<CrossTensor>,
+    src: &SharedPtr<CrossTensor>,
+    out: TensorOut,
+    inplace: bool,
+) -> Result<SharedPtr<CrossTensor>>;
